native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_read_memory(
    sogen_dart_app *app, uint64_t address, uint8_t *destination, size_t length);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_write_memory(sogen_dart_app *app, uint64_t address,
                                const uint8_t *source, size_t length);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_read_register(
    sogen_dart_app *app, int32_t reg, uint64_t *value);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_write_register(
    sogen_dart_app *app, int32_t reg, uint64_t value);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_get_executed_instructions(sogen_dart_app *app,
                                             uint64_t *value);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_backend_name(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_emulation_root(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_last_stop_detail(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_host_port(
    sogen_dart_app *app, uint16_t emulator_port, uint16_t *host_port);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_get_emulator_port(
    sogen_dart_app *app, uint16_t host_port, uint16_t *emulator_port);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_map_port(
    sogen_dart_app *app, uint16_t emulator_port, uint16_t host_port);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_allocate(
    sogen_dart_app *app, size_t size, int32_t permissions, int32_t reserve_only,
    uint64_t start, int32_t kind, uint64_t *address);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_protect(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t permissions,
    int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_commit(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t permissions,
    int32_t *success);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_memory_decommit(
    sogen_dart_app *app, uint64_t address, size_t size, int32_t *success);