native/include/generated/sogen_dart_generated.h

typedef int32_t sogen_dart_status;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;