lib/src/ffi/sogen_native_bindings.g.dart


  late final _sogen_dart_windows_read_memoryPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('sogen_dart_windows_read_memory');
  late final _sogen_dart_windows_read_memory =
      _sogen_dart_windows_read_memoryPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int sogen_dart_windows_write_memory(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<ffi.Uint8> source,
    int length,
  ) {
    return _sogen_dart_windows_write_memory(app, address, source, length);
  }

  late final _sogen_dart_windows_write_memoryPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('sogen_dart_windows_write_memory');
  late final _sogen_dart_windows_write_memory =
      _sogen_dart_windows_write_memoryPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int sogen_dart_windows_read_register(
    ffi.Pointer<sogen_dart_app> app,
    int reg,
    ffi.Pointer<ffi.Uint64> value,
  ) {
    return _sogen_dart_windows_read_register(app, reg, value);
  }

  late final _sogen_dart_windows_read_registerPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_windows_read_register');
  late final _sogen_dart_windows_read_register =
      _sogen_dart_windows_read_registerPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int sogen_dart_windows_write_register(
    ffi.Pointer<sogen_dart_app> app,
    int reg,
    int value,
  ) {
    return _sogen_dart_windows_write_register(app, reg, value);
  }

  late final _sogen_dart_windows_write_registerPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Int32,
            ffi.Uint64,
          )
        >
      >('sogen_dart_windows_write_register');
  late final _sogen_dart_windows_write_register =
      _sogen_dart_windows_write_registerPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int, int)>();

  int sogen_dart_windows_get_executed_instructions(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Uint64> value,
  ) {
    return _sogen_dart_windows_get_executed_instructions(app, value);
  }

  late final _sogen_dart_windows_get_executed_instructionsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_windows_get_executed_instructions');
  late final _sogen_dart_windows_get_executed_instructions =
      _sogen_dart_windows_get_executed_instructionsPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Uint64>)
          >();

  int sogen_dart_windows_get_backend_name(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_windows_get_backend_name(app, out_buffer);
  }

  late final _sogen_dart_windows_get_backend_namePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_windows_get_backend_name');
  late final _sogen_dart_windows_get_backend_name =
      _sogen_dart_windows_get_backend_namePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_windows_get_emulation_root(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_windows_get_emulation_root(app, out_buffer);
  }

  late final _sogen_dart_windows_get_emulation_rootPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_windows_get_emulation_root');
  late final _sogen_dart_windows_get_emulation_root =
      _sogen_dart_windows_get_emulation_rootPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_windows_get_last_stop_detail(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_windows_get_last_stop_detail(app, out_buffer);
  }

  late final _sogen_dart_windows_get_last_stop_detailPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_windows_get_last_stop_detail');
  late final _sogen_dart_windows_get_last_stop_detail =
      _sogen_dart_windows_get_last_stop_detailPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_windows_get_host_port(
    ffi.Pointer<sogen_dart_app> app,
    int emulator_port,
    ffi.Pointer<ffi.Uint16> host_port,
  ) {
    return _sogen_dart_windows_get_host_port(app, emulator_port, host_port);
  }

  late final _sogen_dart_windows_get_host_portPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint16,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('sogen_dart_windows_get_host_port');
  late final _sogen_dart_windows_get_host_port =
      _sogen_dart_windows_get_host_portPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint16>,
            )
          >();

  int sogen_dart_windows_get_emulator_port(
    ffi.Pointer<sogen_dart_app> app,
    int host_port,
    ffi.Pointer<ffi.Uint16> emulator_port,
  ) {
    return _sogen_dart_windows_get_emulator_port(app, host_port, emulator_port);
  }

  late final _sogen_dart_windows_get_emulator_portPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint16,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('sogen_dart_windows_get_emulator_port');
  late final _sogen_dart_windows_get_emulator_port =
      _sogen_dart_windows_get_emulator_portPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint16>,
            )
          >();

  int sogen_dart_windows_map_port(
    ffi.Pointer<sogen_dart_app> app,
    int emulator_port,
    int host_port,
  ) {
    return _sogen_dart_windows_map_port(app, emulator_port, host_port);
  }

  late final _sogen_dart_windows_map_portPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint16,
            ffi.Uint16,
          )
        >
      >('sogen_dart_windows_map_port');
  late final _sogen_dart_windows_map_port = _sogen_dart_windows_map_portPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int, int)>();

  int sogen_dart_windows_memory_allocate(
    ffi.Pointer<sogen_dart_app> app,
    int size,
    int permissions,
    int reserve_only,
    int start,
    int kind,
    ffi.Pointer<ffi.Uint64> address,
  ) {
    return _sogen_dart_windows_memory_allocate(
      app,
      size,
      permissions,
      reserve_only,
      start,
      kind,
      address,
    );
  }

  late final _sogen_dart_windows_memory_allocatePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Size,
            ffi.Int32,
            ffi.Int32,
            ffi.Uint64,
            ffi.Int32,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_windows_memory_allocate');
  late final _sogen_dart_windows_memory_allocate =
      _sogen_dart_windows_memory_allocatePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int sogen_dart_windows_memory_protect(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    int permissions,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_windows_memory_protect(
      app,
      address,
      size,
      permissions,
      success,
    );
  }

  late final _sogen_dart_windows_memory_protectPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_memory_protect');
  late final _sogen_dart_windows_memory_protect =
      _sogen_dart_windows_memory_protectPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_windows_memory_commit(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    int permissions,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_windows_memory_commit(
      app,
      address,
      size,
      permissions,
      success,
    );
  }

  late final _sogen_dart_windows_memory_commitPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Size,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_memory_commit');
  late final _sogen_dart_windows_memory_commit =
      _sogen_dart_windows_memory_commitPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_windows_memory_decommit(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    ffi.Pointer<ffi.Int32> success,
  ) {
    return _sogen_dart_windows_memory_decommit(app, address, size, success);
  }
